rubocop/examples/good/style_ParenthesesAroundCondition.rb
# Don't use parentheses around the condition of an if/unless/while/until.

# good
if x > 10
  # body omitted
end
