rubocop/examples/bad/style_ParenthesesAroundCondition.rb
# Don't use parentheses around the condition of an if/unless/while/until.

# bad
if (x > 10)
  # body omitted
end
